--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<img src="img/birthday.png" alt="" width="300" height="178" />
+<img id="img" src="img/birthday.png" alt="" width="300" height="178" />
 <a href="https://github.com/niftylettuce/happymothereffingbirthday.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <div id="happy-mother-effing-birthday">
   <span>Happy</span><br />
